added html for sidebar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title>Etsy Recreation</title>
 </head>
@@ -15,7 +14,58 @@
     <div class="row">
       <div class="col-3">
         <div class="sidebar">
-          <p>Sidebar</p>
+          <div class="section-1">
+            <h1>All categories</h1>
+            <ul>
+              <li class="categories"><a href="#">Books, Movies & Music</a></li>
+              <li class="categories"><a href="#">Craft Supplies & Tools</a></li>
+              <li class="categories"><a href="#">Accessories</a></li>
+              <li class="categories"><a href="#">Bags & Purses</a></li>
+            </ul>
+            <a href="#" class="more">+ Show more</a>
+            <hr>
+            <div class="section-2">
+              <h1>Shipping</h1>
+              <input type="checkbox" value="Free shipping"> Free shipping <br>
+              <input type="checkbox" value="1 day"> Ready to ship in 1 business day <br>
+              <input type="checkbox" value="3 day"> Ready to ship within 3 business <br> days
+              <hr>
+            </div>
+            <div class="section-3">
+              <h1>Special Offers</h1>
+              <input type="checkbox" value="On Sale"> On sale <br>
+              <hr>
+            </div>
+            <div class="section-4">
+              <h1>Shop location</h1>
+              <input type="checkbox" value="Anywhere"> Anywhere <br>
+              <input type="checkbox" value="US"> United States <br>
+              <hr>
+            </div>
+            <div class="section-5">
+              <h1>Item type</h1>
+              <input type="checkbox" value="All items"> All items <br>
+              <input type="checkbox" value="Handmade"> Handmade <br>
+              <input type="checkbox" value="Vintage"> Vintage <br>
+              <hr>
+            </div>
+            <div class="section-6">
+              <h1>Price ($)</h1>
+              <input type="checkbox" value="Any price"> Any price <br>
+              <input type="checkbox" value="Under $25"> Under $25 <br>
+              <input type="checkbox" value="$25-$50"> $25 to $50 <br>
+              <input type="checkbox" value="$50-$100"> $50 to $100 <br>
+              <input type="checkbox" value="$100-"> Over $100 <br>
+              <hr>
+            </div>
+            <div class="section-7">
+              <h1>Ordering options</h1>
+              <input type="checkbox" value="gift cards"> Accepts Etsy gift cards <br>
+              <input type="checkbox" value="Customizable"> Customizable <br>
+              <input type="checkbox" value="$Gift wrap"> Can be gift-wrapped <br>
+            </div>
+
+          </div>
         </div>
       </div>
 
@@ -25,6 +75,7 @@
       </div>
     </div>
   </div>
+  <!-- links to handlebars template in JS -->
   <script id="main-template" type="text/x-handlebars-template">
     {{#results}}
     <a href={{url}} <div class="cards">
